shuffle values in `overrideQueue`

--- a/src/app/administrator/page.module.css
+++ b/src/app/administrator/page.module.css
@@ -57,3 +57,24 @@
         grid-template-columns: 1fr;
     }
 }
+
+.Queue {
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+}
+
+.Queue * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.25rem;
+    line-height: 1.25rem;
+    width: 2rem;
+    height: 2rem;
+    background-color: lightgray;
+}
+
+.Queue *[data-index='0'] {
+    background-color: lightblue;
+}
